boulder/boulder/tests/compile_fail/function/ret_ty/variable_semi.bo
# Mismatched types
# expected `Empty`
# found `u32`
fn variable_semi(a: u32) -> u32 {
    a;
}